Improve savegame parse
Variables were added and they have the same name as other variables in
other blocks of the savegame. This commit improves the parsing of those
kind of variables.